[package]
name = "cnctd_cargo"
version = "0.1.13"
edition = "2021"
authors = ["Connected Dot Inc.", "Kyle Ebner <kyle@cnctd.world>"]
description = "Cargo Methods"
license = "MIT"
repository = "https://github.com/Connected-Dot/cnctd_cargo"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
cnctd_rest = { version = "0.1.2", path = "../cnctd_rest" }
cnctd_shell = { version = "0.1.7", path = "../cnctd_shell" }
glob = "0.3.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tokio = { version = "1.37.0", features = ["full"] }
toml = "0.8.12"
toml_edit = "0.22.9"
